<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_layout_id"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/WhiteIconToolbar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleCentered="true"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:hint="@string/full_name" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:hint="@string/address" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/study_program" />

            <Spinner
                android:id="@+id/sp_prodi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/study"
                android:padding="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/domicile" />

            <RadioGroup
                android:id="@+id/rg_domisili"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_DK"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_48"
                    android:checked="true"
                    android:text="@string/in_town" />

                <RadioButton
                    android:id="@+id/rb_LK"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_48"
                    android:checked="true"
                    android:text="@string/out_of_town" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobby" />

            <CheckBox
                android:id="@+id/cb_teknologi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:text="@string/technology" />

            <CheckBox
                android:id="@+id/cb_kuliner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginBottom="20dp"
                android:text="@string/culinary" />

            <Button
                android:id="@+id/bt_detil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_light"
                android:text="@string/detail"
                app:icon="@drawable/plus_white_24"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:id="@+id/bt_toast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_1"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/toast"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/bt_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dp_1"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="@string/dialog"
                    android:textColor="#fff"
                    style="?attr/buttonBarStyle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:id="@+id/bt_notifikasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notification" />

                <Button
                    android:id="@+id/bt_snack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="@dimen/dp_1"
                    android:text="@string/snack_bar"
                    style="?attr/materialButtonOutlinedStyle"/>

            </LinearLayout>

            <Button
                android:id="@+id/bt_keluar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/close"
                style="@style/Widget.Material3.Button.TextButton"/>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>